WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270918
RefinedForGithub extension cannot be enabled: Invalid call to permissions.request()
https://bugs.webkit.org/show_bug.cgi?id=270918
Summary
RefinedForGithub extension cannot be enabled: Invalid call to permissions.req...
Elijah Sawyers
Reported
2024-03-13 11:08:23 PDT
rdar://123775789
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2024-03-13 11:19:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25827
EWS
Comment 2
2024-03-13 19:28:12 PDT
Committed
276065@main
(027a604092f7): <
https://commits.webkit.org/276065@main
> Reviewed commits have been landed. Closing PR #25827 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug