RefinedForGithub extension cannot be enabled: Invalid call to permissions.request() https://bugs.webkit.org/show_bug.cgi?id=270918 rdar://123775789

Reviewed by Timothy Hatcher.

When requesting permissions (permissions.request()), there is a check to make sure
that the method was called when processing a user gesture. As it stands, the check
doesn't handle events for actions, context menus, and commands. This patch makes
it such that WebCore::UserGestureIndicator::processingUserGesture() returns true
when handling those events.

* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIActionCocoa.mm:
(WebKit::WebExtensionContextProxy::dispatchActionClickedEvent):
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPICommandsCocoa.mm:
(WebKit::WebExtensionContextProxy::dispatchCommandsCommandEvent):
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIMenusCocoa.mm:
(WebKit::WebExtensionContextProxy::dispatchMenusClickedEvent):

Canonical link: https://commits.webkit.org/276065@main